<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Messages</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	 <string name="imageview_default_description">imageview_default_description</string>
	 <string name="favorite">收藏夹</string>
	 <string name="folder">文件夹</string>
	 <string name="category">类别</string>
	 <string name="saferemark">安全备注</string>
	 <string name="creditcard">信用卡</string>
	 <string name="login_message">登录信息</string>
	 <string name="selectcategory">选择类别</string>
	 <string name="cardName">持卡人姓名</string>
	 <string name="cardnumber">卡号</string>
	 <string name="cvv">CVV2</string>
	 <string name="indate">有效期</string>
	 <string name="limit">额度</string>
	 <string name="save">保存</string>
	 <string name="cancel">取消</string>
	<string name="note_hint">输入您的备注</string>
</resources>
