<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer_layout"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:background="#78000000"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rb_favorite"
            android:layout_marginTop="20dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:text="@string/favorite"
            android:textColor="@color/rb_textcolor_selector" />

        <RadioButton
            android:id="@+id/rb_folder"
            android:layout_marginTop="25dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:text="@string/folder"
            android:textColor="@color/rb_textcolor_selector" />

        <RadioButton
            android:id="@+id/rb_category"
            android:layout_marginTop="25dp"
            android:button="@null"
            android:drawablePadding="10dp"
            android:text="@string/category"
            android:textColor="@color/rb_textcolor_selector" />
    </RadioGroup>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>