<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/creditcard_top_actionbar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#3399FF" >

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/imageview_default_description"
        android:src="@mipmap/ic_action_cancel" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/iv_cancel"
        android:textSize="@dimen/top_actionbar_textsize"
        android:text="@string/cancel"
        android:textColor="#FFFFFF" />



    <ImageView
        android:id="@+id/iv_save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/imageview_default_description"
        android:src="@mipmap/ic_action_tick"
        android:layout_alignTop="@+id/iv_cancel"
        android:layout_toStartOf="@+id/tv_save"/>


    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:textSize="@dimen/top_actionbar_textsize"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

</RelativeLayout>