<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:text="@string/selectcategory"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3399FF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#3399FF"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearlayout_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription="@string/imageview_default_description"
            android:src="@mipmap/type_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/saferemark"
            android:textColor="#333333"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearlayout_credit_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription="@string/imageview_default_description"
            android:src="@mipmap/type_credit_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/creditcard"
            android:textColor="#333333"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearlayout_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:contentDescription="@string/imageview_default_description"
            android:src="@mipmap/type_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/login_message"
            android:textColor="#333333"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>