<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/creditcard_detail_top_actionbar"
             android:layout_height="@dimen/top_actionbar_height"
             android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/imageview_default_description"
                    android:src="@mipmap/type_credit_card" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/et_bankname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/creditcard"
                        android:textColor="#333333" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/creditcard"
                        android:textColor="#333333"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cardName"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_cardname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardName"
                    android:inputType="text"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cardnumber"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_cardnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardnumber"
                    android:inputType="number"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cvv"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cvv"
                    android:inputType="numberPassword"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/indate"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_indate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/indate"
                    android:inputType="number"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/limit"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/limit"
                    android:inputType="number"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>