<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/credit_detail_show_top_actionbar"
             android:layout_height="@dimen/top_actionbar_height"
             android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:contentDescription="@string/imageview_default_description"
                    android:src="@mipmap/type_credit_card" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_bankname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/creditcard"
                        android:textColor="#333333"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/creditcard"
                        android:textColor="#333333"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cardName"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_cardname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cardName"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F0F0F0"
                    android:gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cardnumber"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_cardnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cardnumber"
                    android:textColor="#333333"
                    android:textSize="15sp" />
                   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F0F0F0"
                    android:gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/cvv"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/cvv"
                    android:textColor="#333333"
                    android:textSize="15sp" />
                   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F0F0F0"
                    android:gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/indate"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_indate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/indate"
                    android:textColor="#333333"
                    android:textSize="15sp" />
                   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F0F0F0"
                    android:gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/limit"
                    android:textColor="#3399FF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/limit"
                    android:textColor="#333333"
                    android:textSize="15sp" />
                   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#F0F0F0"
                    android:gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>